train with edge image(v1)

--- a/suyoung/main/preprocessing/test.ipynb
+++ b/suyoung/main/preprocessing/test.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -42,17 +42,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
     "import os\n",
-    "os.chdir('/data/ephemeral/home/cv20-proj1/level1-imageclassification-cv-20')"
+    "os.chdir('/data/ephemeral/home/cv20-proj1/level1-imageclassification-cv-20/suyoung')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -61,144 +61,6 @@
     "\n",
     "# 테스트 데이터\n",
     "test_data = pd.read_csv(testdata_info_file)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 60,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "sorted_train_data = train_data.sort_values(by='target')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 61,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>class_name</th>\n",
-       "      <th>image_path</th>\n",
-       "      <th>target</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>11385</th>\n",
-       "      <td>n01443537</td>\n",
-       "      <td>n01443537/sketch_15.JPEG</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>11662</th>\n",
-       "      <td>n01443537</td>\n",
-       "      <td>n01443537/sketch_17.JPEG</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>7797</th>\n",
-       "      <td>n01443537</td>\n",
-       "      <td>n01443537/sketch_12.JPEG</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>11464</th>\n",
-       "      <td>n01443537</td>\n",
-       "      <td>n01443537/sketch_41.JPEG</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>9370</th>\n",
-       "      <td>n01443537</td>\n",
-       "      <td>n01443537/sketch_3.JPEG</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>9349</th>\n",
-       "      <td>n13054560</td>\n",
-       "      <td>n13054560/sketch_10.JPEG</td>\n",
-       "      <td>499</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>12779</th>\n",
-       "      <td>n13054560</td>\n",
-       "      <td>n13054560/sketch_15.JPEG</td>\n",
-       "      <td>499</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>13864</th>\n",
-       "      <td>n13054560</td>\n",
-       "      <td>n13054560/sketch_0.JPEG</td>\n",
-       "      <td>499</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2917</th>\n",
-       "      <td>n13054560</td>\n",
-       "      <td>n13054560/sketch_28.JPEG</td>\n",
-       "      <td>499</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>308</th>\n",
-       "      <td>n13054560</td>\n",
-       "      <td>n13054560/sketch_49.JPEG</td>\n",
-       "      <td>499</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>15021 rows × 3 columns</p>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "      class_name                image_path  target\n",
-       "11385  n01443537  n01443537/sketch_15.JPEG       0\n",
-       "11662  n01443537  n01443537/sketch_17.JPEG       0\n",
-       "7797   n01443537  n01443537/sketch_12.JPEG       0\n",
-       "11464  n01443537  n01443537/sketch_41.JPEG       0\n",
-       "9370   n01443537   n01443537/sketch_3.JPEG       0\n",
-       "...          ...                       ...     ...\n",
-       "9349   n13054560  n13054560/sketch_10.JPEG     499\n",
-       "12779  n13054560  n13054560/sketch_15.JPEG     499\n",
-       "13864  n13054560   n13054560/sketch_0.JPEG     499\n",
-       "2917   n13054560  n13054560/sketch_28.JPEG     499\n",
-       "308    n13054560  n13054560/sketch_49.JPEG     499\n",
-       "\n",
-       "[15021 rows x 3 columns]"
-      ]
-     },
-     "execution_count": 61,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "sorted_train_data"
    ]
   },
   {
@@ -221,7 +83,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -230,7 +92,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -239,7 +101,7 @@
        "500"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -287,7 +149,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -316,7 +178,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -341,7 +203,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -398,7 +260,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -545,7 +407,7 @@
        "2646          1.237136  n01443537       0  "
       ]
      },
-     "execution_count": 16,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -603,185 +465,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>height</th>\n",
-       "      <th>width</th>\n",
-       "      <th>mode</th>\n",
-       "      <th>format</th>\n",
-       "      <th>size</th>\n",
-       "      <th>mean_red</th>\n",
-       "      <th>mean_green</th>\n",
-       "      <th>mean_blue</th>\n",
-       "      <th>path</th>\n",
-       "      <th>image_path</th>\n",
-       "      <th>img_aspect_ratio</th>\n",
-       "      <th>class_name</th>\n",
-       "      <th>target</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>2638</th>\n",
-       "      <td>628</td>\n",
-       "      <td>800</td>\n",
-       "      <td>RGB</td>\n",
-       "      <td>JPEG</td>\n",
-       "      <td>0.05</td>\n",
-       "      <td>236.068286</td>\n",
-       "      <td>236.068286</td>\n",
-       "      <td>236.068286</td>\n",
-       "      <td>./data/train/n01443537/sketch_13.JPEG</td>\n",
-       "      <td>n01443537/sketch_13.JPEG</td>\n",
-       "      <td>1.273885</td>\n",
-       "      <td>n01443537</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2645</th>\n",
-       "      <td>470</td>\n",
-       "      <td>450</td>\n",
-       "      <td>RGB</td>\n",
-       "      <td>JPEG</td>\n",
-       "      <td>0.08</td>\n",
-       "      <td>219.883764</td>\n",
-       "      <td>219.918085</td>\n",
-       "      <td>219.901504</td>\n",
-       "      <td>./data/train/n01443537/sketch_43.JPEG</td>\n",
-       "      <td>n01443537/sketch_43.JPEG</td>\n",
-       "      <td>0.957447</td>\n",
-       "      <td>n01443537</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2644</th>\n",
-       "      <td>470</td>\n",
-       "      <td>450</td>\n",
-       "      <td>RGB</td>\n",
-       "      <td>JPEG</td>\n",
-       "      <td>0.05</td>\n",
-       "      <td>234.881868</td>\n",
-       "      <td>234.881868</td>\n",
-       "      <td>234.881868</td>\n",
-       "      <td>./data/train/n01443537/sketch_6.JPEG</td>\n",
-       "      <td>n01443537/sketch_6.JPEG</td>\n",
-       "      <td>0.957447</td>\n",
-       "      <td>n01443537</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2647</th>\n",
-       "      <td>671</td>\n",
-       "      <td>800</td>\n",
-       "      <td>RGB</td>\n",
-       "      <td>JPEG</td>\n",
-       "      <td>0.11</td>\n",
-       "      <td>185.432288</td>\n",
-       "      <td>185.726542</td>\n",
-       "      <td>187.349311</td>\n",
-       "      <td>./data/train/n01443537/sketch_10.JPEG</td>\n",
-       "      <td>n01443537/sketch_10.JPEG</td>\n",
-       "      <td>1.192250</td>\n",
-       "      <td>n01443537</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2646</th>\n",
-       "      <td>447</td>\n",
-       "      <td>553</td>\n",
-       "      <td>RGB</td>\n",
-       "      <td>JPEG</td>\n",
-       "      <td>0.05</td>\n",
-       "      <td>237.306188</td>\n",
-       "      <td>236.565138</td>\n",
-       "      <td>236.498012</td>\n",
-       "      <td>./data/train/n01443537/sketch_9.JPEG</td>\n",
-       "      <td>n01443537/sketch_9.JPEG</td>\n",
-       "      <td>1.237136</td>\n",
-       "      <td>n01443537</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "      height  width mode format  size    mean_red  mean_green   mean_blue  \\\n",
-       "2638     628    800  RGB   JPEG  0.05  236.068286  236.068286  236.068286   \n",
-       "2645     470    450  RGB   JPEG  0.08  219.883764  219.918085  219.901504   \n",
-       "2644     470    450  RGB   JPEG  0.05  234.881868  234.881868  234.881868   \n",
-       "2647     671    800  RGB   JPEG  0.11  185.432288  185.726542  187.349311   \n",
-       "2646     447    553  RGB   JPEG  0.05  237.306188  236.565138  236.498012   \n",
-       "\n",
-       "                                       path                image_path  \\\n",
-       "2638  ./data/train/n01443537/sketch_13.JPEG  n01443537/sketch_13.JPEG   \n",
-       "2645  ./data/train/n01443537/sketch_43.JPEG  n01443537/sketch_43.JPEG   \n",
-       "2644   ./data/train/n01443537/sketch_6.JPEG   n01443537/sketch_6.JPEG   \n",
-       "2647  ./data/train/n01443537/sketch_10.JPEG  n01443537/sketch_10.JPEG   \n",
-       "2646   ./data/train/n01443537/sketch_9.JPEG   n01443537/sketch_9.JPEG   \n",
-       "\n",
-       "      img_aspect_ratio class_name  target  \n",
-       "2638          1.273885  n01443537       0  \n",
-       "2645          0.957447  n01443537       0  \n",
-       "2644          0.957447  n01443537       0  \n",
-       "2647          1.192250  n01443537       0  \n",
-       "2646          1.237136  n01443537       0  "
-      ]
-     },
-     "execution_count": 48,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "image_data.head()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 64,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array(['n01443537', 'n01443537', 'n01443537', ..., 'n13054560',\n",
-       "       'n13054560', 'n13054560'], dtype=object)"
-      ]
-     },
-     "execution_count": 64,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "image_data['class_name'].values"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 49,
    "metadata": {},
    "outputs": [
@@ -813,16 +496,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "os.makedirs('/data/ephemeral/home/cv20-proj1/level1-imageclassification-cv-20/suyoung/main/preprocessing/canny/test')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -830,26 +504,168 @@
      "output_type": "stream",
      "text": [
       "0th work done\n",
-      "1th work done\n",
-      "2th work done\n",
-      "3th work done\n",
-      "4th work done\n",
-      "5th work done\n",
-      "6th work done\n",
-      "7th work done\n",
-      "8th work done\n",
-      "9th work done\n"
+      "100th work done\n",
+      "200th work done\n",
+      "300th work done\n",
+      "400th work done\n",
+      "500th work done\n",
+      "600th work done\n",
+      "700th work done\n",
+      "800th work done\n",
+      "900th work done\n",
+      "1000th work done\n",
+      "1100th work done\n",
+      "1200th work done\n",
+      "1300th work done\n",
+      "1400th work done\n",
+      "1500th work done\n",
+      "1600th work done\n",
+      "1700th work done\n",
+      "1800th work done\n",
+      "1900th work done\n",
+      "2000th work done\n",
+      "2100th work done\n",
+      "2200th work done\n",
+      "2300th work done\n",
+      "2400th work done\n",
+      "2500th work done\n",
+      "2600th work done\n",
+      "2700th work done\n",
+      "2800th work done\n",
+      "2900th work done\n",
+      "3000th work done\n",
+      "3100th work done\n",
+      "3200th work done\n",
+      "3300th work done\n",
+      "3400th work done\n",
+      "3500th work done\n",
+      "3600th work done\n",
+      "3700th work done\n",
+      "3800th work done\n",
+      "3900th work done\n",
+      "4000th work done\n",
+      "4100th work done\n",
+      "4200th work done\n",
+      "4300th work done\n",
+      "4400th work done\n",
+      "4500th work done\n",
+      "4600th work done\n",
+      "4700th work done\n",
+      "4800th work done\n",
+      "4900th work done\n",
+      "5000th work done\n",
+      "5100th work done\n",
+      "5200th work done\n",
+      "5300th work done\n",
+      "5400th work done\n",
+      "5500th work done\n",
+      "5600th work done\n",
+      "5700th work done\n",
+      "5800th work done\n",
+      "5900th work done\n",
+      "6000th work done\n",
+      "6100th work done\n",
+      "6200th work done\n",
+      "6300th work done\n",
+      "6400th work done\n",
+      "6500th work done\n",
+      "6600th work done\n",
+      "6700th work done\n",
+      "6800th work done\n",
+      "6900th work done\n",
+      "7000th work done\n",
+      "7100th work done\n",
+      "7200th work done\n",
+      "7300th work done\n",
+      "7400th work done\n",
+      "7500th work done\n",
+      "7600th work done\n",
+      "7700th work done\n",
+      "7800th work done\n",
+      "7900th work done\n",
+      "8000th work done\n",
+      "8100th work done\n",
+      "8200th work done\n",
+      "8300th work done\n",
+      "8400th work done\n",
+      "8500th work done\n",
+      "8600th work done\n",
+      "8700th work done\n",
+      "8800th work done\n",
+      "8900th work done\n",
+      "9000th work done\n",
+      "9100th work done\n",
+      "9200th work done\n",
+      "9300th work done\n",
+      "9400th work done\n",
+      "9500th work done\n",
+      "9600th work done\n",
+      "9700th work done\n",
+      "9800th work done\n",
+      "9900th work done\n",
+      "10000th work done\n",
+      "10100th work done\n",
+      "10200th work done\n",
+      "10300th work done\n",
+      "10400th work done\n",
+      "10500th work done\n",
+      "10600th work done\n",
+      "10700th work done\n",
+      "10800th work done\n",
+      "10900th work done\n",
+      "11000th work done\n",
+      "11100th work done\n",
+      "11200th work done\n",
+      "11300th work done\n",
+      "11400th work done\n",
+      "11500th work done\n",
+      "11600th work done\n",
+      "11700th work done\n",
+      "11800th work done\n",
+      "11900th work done\n",
+      "12000th work done\n",
+      "12100th work done\n",
+      "12200th work done\n",
+      "12300th work done\n",
+      "12400th work done\n",
+      "12500th work done\n",
+      "12600th work done\n",
+      "12700th work done\n",
+      "12800th work done\n",
+      "12900th work done\n",
+      "13000th work done\n",
+      "13100th work done\n",
+      "13200th work done\n",
+      "13300th work done\n",
+      "13400th work done\n",
+      "13500th work done\n",
+      "13600th work done\n",
+      "13700th work done\n",
+      "13800th work done\n",
+      "13900th work done\n",
+      "14000th work done\n",
+      "14100th work done\n",
+      "14200th work done\n",
+      "14300th work done\n",
+      "14400th work done\n",
+      "14500th work done\n",
+      "14600th work done\n",
+      "14700th work done\n",
+      "14800th work done\n",
+      "14900th work done\n",
+      "15000th work done\n"
      ]
     }
    ],
    "source": [
     "folders = []\n",
-    "canny_dir = '/data/ephemeral/home/cv20-proj1/level1-imageclassification-cv-20/suyoung/main/preprocessing/canny/'\n",
-    "for i in range(10):\n",
+    "canny_dir = '/data/ephemeral/home/cv20-proj1/level1-imageclassification-cv-20/suyoung/data/canny/'\n",
+    "\n",
+    "for i in range(len(image_data)):\n",
     "    class_name = image_data['class_name'].values[i]\n",
     "    image_path = image_data['path'].values[i]\n",
     "    file_name = image_path.split('/')[-1]\n",
-    "    \n",
+    "\n",
     "    # Canny edge detection \n",
     "    image = cv2.imread(image_path)\n",
     "    gray = cv2.cvtColor(image, cv2.COLOR_BGR2GRAY)\n",
@@ -859,8 +675,11 @@
     "        cv2.imwrite(canny_dir+class_name+'/'+file_name, edge)\n",
     "    else:\n",
     "        folders.append(class_name)\n",
+    "        os.makedirs(canny_dir+class_name)\n",
     "        cv2.imwrite(canny_dir+class_name+'/'+file_name, edge)\n",
-    "    print(f'{i}th work done')\n"
+    "    \n",
+    "    if i % 100 == 0:\n",
+    "        print(f'{i}th work done')\n"
    ]
   },
   {
