--- a/suyoung/main/preprocessing/test.ipynb
+++ b/suyoung/main/preprocessing/test.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -42,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -52,7 +52,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -83,7 +83,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -92,7 +92,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -101,7 +101,7 @@
        "500"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -149,7 +149,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -178,7 +178,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -203,7 +203,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -496,7 +496,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -684,513 +684,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "n02087046 done\n",
-      "n03291819 done\n",
-      "n02870880 done\n",
-      "n07248320 done\n",
-      "n02091032 done\n",
-      "n02112137 done\n",
-      "n02843684 done\n",
-      "n03787032 done\n",
-      "n04005630 done\n",
-      "n02410509 done\n",
-      "n02056570 done\n",
-      "n04141076 done\n",
-      "n03803284 done\n",
-      "n03481172 done\n",
-      "n04376876 done\n",
-      "n01677366 done\n",
-      "n03530642 done\n",
-      "n04252225 done\n",
-      "n01644373 done\n",
-      "n01795545 done\n",
-      "n02088632 done\n",
-      "n02326432 done\n",
-      "n02493793 done\n",
-      "n07873807 done\n",
-      "n04371430 done\n",
-      "n04591713 done\n",
-      "n12267677 done\n",
-      "n07715103 done\n",
-      "n04252077 done\n",
-      "n07714990 done\n",
-      "n12998815 done\n",
-      "n01582220 done\n",
-      "n04162706 done\n",
-      "n03642806 done\n",
-      "n02133161 done\n",
-      "n04517823 done\n",
-      "n07716358 done\n",
-      "n03249569 done\n",
-      "n04131690 done\n",
-      "n02672831 done\n",
-      "n03857828 done\n",
-      "n04493381 done\n",
-      "n01614925 done\n",
-      "n02415577 done\n",
-      "n04355933 done\n",
-      "n06785654 done\n",
-      "n03063689 done\n",
-      "n07615774 done\n",
-      "n04522168 done\n",
-      "n01978287 done\n",
-      "n02480495 done\n",
-      "n03929660 done\n",
-      "n04317175 done\n",
-      "n02007558 done\n",
-      "n02106550 done\n",
-      "n01739381 done\n",
-      "n04136333 done\n",
-      "n02104029 done\n",
-      "n01532829 done\n",
-      "n02132136 done\n",
-      "n02099601 done\n",
-      "n04259630 done\n",
-      "n04456115 done\n",
-      "n07734744 done\n",
-      "n02102040 done\n",
-      "n03942813 done\n",
-      "n01530575 done\n",
-      "n02879718 done\n",
-      "n10148035 done\n",
-      "n01910747 done\n",
-      "n13052670 done\n",
-      "n02749479 done\n",
-      "n02101006 done\n",
-      "n02841315 done\n",
-      "n04532106 done\n",
-      "n12144580 done\n",
-      "n04350905 done\n",
-      "n03124043 done\n",
-      "n02441942 done\n",
-      "n02100236 done\n",
-      "n02457408 done\n",
-      "n03544143 done\n",
-      "n02396427 done\n",
-      "n01748264 done\n",
-      "n02443114 done\n",
-      "n01833805 done\n",
-      "n03770439 done\n",
-      "n02391049 done\n",
-      "n02802426 done\n",
-      "n01644900 done\n",
-      "n04429376 done\n",
-      "n02129604 done\n",
-      "n01695060 done\n",
-      "n03595614 done\n",
-      "n02361337 done\n",
-      "n04254680 done\n",
-      "n01514668 done\n",
-      "n02791124 done\n",
-      "n04606251 done\n",
-      "n02279972 done\n",
-      "n07613480 done\n",
-      "n02120079 done\n",
-      "n04525305 done\n",
-      "n02097047 done\n",
-      "n03763968 done\n",
-      "n01968897 done\n",
-      "n01496331 done\n",
-      "n07614500 done\n",
-      "n01749939 done\n",
-      "n04579432 done\n",
-      "n04041544 done\n",
-      "n03388043 done\n",
-      "n04612504 done\n",
-      "n01608432 done\n",
-      "n04229816 done\n",
-      "n01616318 done\n",
-      "n04209133 done\n",
-      "n03476684 done\n",
-      "n02114548 done\n",
-      "n04004767 done\n",
-      "n02123597 done\n",
-      "n07717410 done\n",
-      "n02101388 done\n",
-      "n07753592 done\n",
-      "n03916031 done\n",
-      "n04553703 done\n",
-      "n03961711 done\n",
-      "n01531178 done\n",
-      "n01592084 done\n",
-      "n02939185 done\n",
-      "n02442845 done\n",
-      "n01983481 done\n",
-      "n03673027 done\n",
-      "n07583066 done\n",
-      "n02389026 done\n",
-      "n03903868 done\n",
-      "n03089624 done\n",
-      "n02027492 done\n",
-      "n03793489 done\n",
-      "n03792782 done\n",
-      "n01873310 done\n",
-      "n02102318 done\n",
-      "n03131574 done\n",
-      "n02110958 done\n",
-      "n04026417 done\n",
-      "n04560804 done\n",
-      "n03450230 done\n",
-      "n04266014 done\n",
-      "n01740131 done\n",
-      "n02892767 done\n",
-      "n03976657 done\n",
-      "n02951585 done\n",
-      "n02077923 done\n",
-      "n04275548 done\n",
-      "n02114367 done\n",
-      "n02236044 done\n",
-      "n03637318 done\n",
-      "n02130308 done\n",
-      "n01985128 done\n",
-      "n03781244 done\n",
-      "n01751748 done\n",
-      "n02002556 done\n",
-      "n02134084 done\n",
-      "n04591157 done\n",
-      "n02814533 done\n",
-      "n02107574 done\n",
-      "n01773797 done\n",
-      "n01601694 done\n",
-      "n04235860 done\n",
-      "n02109525 done\n",
-      "n02114712 done\n",
-      "n02690373 done\n",
-      "n02992211 .DS_Store\n",
-      "n02510455 n02992211\n",
-      "n03724870 n02510455\n",
-      "n02009912 n03724870\n",
-      "n03710193 n02009912\n",
-      "n04238763 n03710193\n",
-      "n02172182 n04238763\n",
-      "n02100735 n02172182\n",
-      "n04548362 n02100735\n",
-      "n03891251 n04548362\n",
-      "n03379051 n03891251\n",
-      "n01774384 n03379051\n",
-      "n01775062 n01774384\n",
-      "n04435653 n01775062\n",
-      "n02727426 n04435653\n",
-      "n03496892 n02727426\n",
-      "n02321529 n03496892\n",
-      "n03995372 n02321529\n",
-      "n01484850 n03995372\n",
-      "n02107142 n01484850\n",
-      "n04428191 n02107142\n",
-      "n02111500 n04428191\n",
-      "n02165456 n02111500\n",
-      "n04141975 n02165456\n",
-      "n02092339 n04141975\n",
-      "n01728572 n02092339\n",
-      "n04409515 n01728572\n",
-      "n02128385 n04409515\n",
-      "n01694178 n02128385\n",
-      "n03445777 n01694178\n",
-      "n04049303 n03445777\n",
-      "n04336792 n04049303\n",
-      "n01818515 n04336792\n",
-      "n01930112 n01818515\n",
-      "n01558993 n01930112\n",
-      "n04125021 n01558993\n",
-      "n03794056 n04125021\n",
-      "n04372370 n03794056\n",
-      "n02356798 n04372370\n",
-      "n03444034 n02356798\n",
-      "n01872401 n03444034\n",
-      "n04019541 n01872401\n",
-      "n02094433 n04019541\n",
-      "n04033901 n02094433\n",
-      "n04447861 n04033901\n",
-      "n04483307 n04447861\n",
-      "n03709823 n04483307\n",
-      "n02487347 n03709823\n",
-      "n02692877 n02487347\n",
-      "n02793495 n02692877\n",
-      "n02814860 n02793495\n",
-      "n04040759 n02814860\n",
-      "n09256479 n04040759\n",
-      "n02927161 n09256479\n",
-      "n07747607 n02927161\n",
-      "n02090622 n07747607\n",
-      "n02422699 n02090622\n",
-      "n02493509 n02422699\n",
-      "n02113624 n02493509\n",
-      "n03998194 n02113624\n",
-      "n04201297 n03998194\n",
-      "n02892201 n04201297\n",
-      "n02397096 n02892201\n",
-      "n04380533 n02397096\n",
-      "n02106166 n04380533\n",
-      "n02906734 n02106166\n",
-      "n01807496 n02906734\n",
-      "n04599235 n01807496\n",
-      "n07579787 n04599235\n",
-      "n02110806 n07579787\n",
-      "n04254777 n02110806\n",
-      "n02342885 n04254777\n",
-      "n03982430 n02342885\n",
-      "n02325366 n03982430\n",
-      "n07875152 n02325366\n",
-      "n02109047 n07875152\n",
-      "n03692522 n02109047\n",
-      "n02037110 n03692522\n",
-      "n02018795 n02037110\n",
-      "n01860187 n02018795\n",
-      "n01630670 n01860187\n",
-      "n04485082 n01630670\n",
-      "n04251144 n04485082\n",
-      "n04118538 n04251144\n",
-      "n03970156 n04118538\n",
-      "n02281787 n03970156\n",
-      "n02127052 n02281787\n",
-      "n02100877 n02127052\n",
-      "n03584829 n02100877\n",
-      "n01443537 n03584829\n",
-      "n02085782 n01443537\n",
-      "n03895866 n02085782\n",
-      "n02098413 n03895866\n",
-      "n04399382 n02098413\n",
-      "n04074963 n04399382\n",
-      "n04540053 n04074963\n",
-      "n02129165 n04540053\n",
-      "n03345487 n02129165\n",
-      "n01744401 n03345487\n",
-      "n01950731 n01744401\n",
-      "n04344873 n01950731\n",
-      "n04554684 n04344873\n",
-      "n02090379 n04554684\n",
-      "n02105641 n02090379\n",
-      "n01843383 n02105641\n",
-      "n03208938 n01843383\n",
-      "n04081281 n03208938\n",
-      "n02111889 n04081281\n",
-      "n04487081 n02111889\n",
-      "n03775071 n04487081\n",
-      "n02454379 n03775071\n",
-      "n03394916 n02454379\n",
-      "n02641379 n03394916\n",
-      "n03871628 n02641379\n",
-      "n02088094 n03871628\n",
-      "n01537544 n02088094\n",
-      "n02098286 n01537544\n",
-      "n02124075 n02098286\n",
-      "n03534580 n02124075\n",
-      "n11939491 n03534580\n",
-      "n04370456 n11939491\n",
-      "n02108915 n04370456\n",
-      "n10565667 n02108915\n",
-      "n02971356 n10565667\n",
-      "n02412080 n02971356\n",
-      "n02091467 n02412080\n",
-      "n04192698 n02091467\n",
-      "n02643566 n04192698\n",
-      "n04523525 n02643566\n",
-      "n02364673 n04523525\n",
-      "n02799071 n02364673\n",
-      "n04486054 n02799071\n",
-      "n02687172 n04486054\n",
-      "n03788365 n02687172\n",
-      "n02105412 n03788365\n",
-      "n02085936 n02105412\n",
-      "n02088364 n02085936\n",
-      "n02115913 n02088364\n",
-      "n02837789 n02115913\n",
-      "n03720891 n02837789\n",
-      "n01855672 n03720891\n",
-      "n02895154 n01855672\n",
-      "n03109150 n02895154\n",
-      "n02417914 n03109150\n",
-      "n04069434 n02417914\n",
-      "n04127249 n04069434\n",
-      "n02105855 n04127249\n",
-      "n03447721 n02105855\n",
-      "n04509417 n03447721\n",
-      "n01843065 n04509417\n",
-      "n02398521 n01843065\n",
-      "n02093256 n02398521\n",
-      "n02011460 n02093256\n",
-      "n04330267 n02011460\n",
-      "n02107683 n04330267\n",
-      "n04596742 n02107683\n",
-      "n01742172 n04596742\n",
-      "n03761084 n01742172\n",
-      "n01882714 n03761084\n",
-      "n02102177 n01882714\n",
-      "n04536866 n02102177\n",
-      "n03207941 n04536866\n",
-      "n02992529 n03207941\n",
-      "n04507155 n02992529\n",
-      "n03874599 n04507155\n",
-      "n02087394 n03874599\n",
-      "n09472597 n02087394\n",
-      "n02403003 n09472597\n",
-      "n09193705 n02403003\n",
-      "n02113023 n09193705\n",
-      "n02708093 n02113023\n",
-      "n01774750 n02708093\n",
-      "n04209239 n01774750\n",
-      "n04604644 n04209239\n",
-      "n02096585 n04604644\n",
-      "n02999410 n02096585\n",
-      "n09288635 n02999410\n",
-      "n02917067 n09288635\n",
-      "n02769748 n02917067\n",
-      "n04310018 n02769748\n",
-      "n03933933 n04310018\n",
-      "n01688243 n03933933\n",
-      "n02102480 n01688243\n",
-      "n04355338 n02102480\n",
-      "n03938244 n04355338\n",
-      "n03063599 n03938244\n",
-      "n02094258 n03063599\n",
-      "n04476259 n02094258\n",
-      "n02782093 n04476259\n",
-      "n02108089 n02782093\n",
-      "n04120489 n02108089\n",
-      "n04404412 n04120489\n",
-      "n02437312 n04404412\n",
-      "n04037443 n02437312\n",
-      "n03271574 n04037443\n",
-      "n04208210 n03271574\n",
-      "n02058221 n04208210\n",
-      "n02106030 n02058221\n",
-      "n02093428 n02106030\n",
-      "n02105056 n02093428\n",
-      "n03445924 n02105056\n",
-      "n07742313 n03445924\n",
-      "n07753113 n07742313\n",
-      "n01770081 n07753113\n",
-      "n02086240 n01770081\n",
-      "n02009229 n02086240\n",
-      "n04501370 n02009229\n",
-      "n03832673 n04501370\n",
-      "n04326547 n03832673\n",
-      "n01914609 n04326547\n",
-      "n12768682 n01914609\n",
-      "n03630383 n12768682\n",
-      "n02088466 n03630383\n",
-      "n03759954 n02088466\n",
-      "n04487394 n03759954\n",
-      "n03649909 n04487394\n",
-      "n02091134 n03649909\n",
-      "n02676566 n02091134\n",
-      "n04505470 n02676566\n",
-      "n04442312 n04505470\n",
-      "n03598930 n04442312\n",
-      "n02091831 n03598930\n",
-      "n01534433 n02091831\n",
-      "n04366367 n01534433\n",
-      "n02699494 n04366367\n",
-      "n04550184 n02699494\n",
-      "n07754684 n04550184\n",
-      "n04584207 n07754684\n",
-      "n02113712 n04584207\n",
-      "n01729322 n02113712\n",
-      "n04557648 n01729322\n",
-      "n04465501 n04557648\n",
-      "n07768694 n04465501\n",
-      "n04479046 n07768694\n",
-      "n02117135 n04479046\n",
-      "n04039381 n02117135\n",
-      "n03888605 n04039381\n",
-      "n01697457 n03888605\n",
-      "n02092002 n01697457\n",
-      "n02268443 n02092002\n",
-      "n01632777 n02268443\n",
-      "n04263257 n01632777\n",
-      "n02974003 n04263257\n",
-      "n03814906 n02974003\n",
-      "n02086079 n03814906\n",
-      "n02123045 n02086079\n",
-      "n04325704 n02123045\n",
-      "n03980874 n04325704\n",
-      "n03127925 n03980874\n",
-      "n02730930 n03127925\n",
-      "n01494475 n02730930\n",
-      "n07745940 n01494475\n",
-      "n02865351 n07745940\n",
-      "n07718747 n02865351\n",
-      "n07716906 n07718747\n",
-      "n02494079 n07716906\n",
-      "n01735189 n02494079\n",
-      "n01806567 n01735189\n",
-      "n01518878 n01806567\n",
-      "n02408429 n01518878\n",
-      "n02089973 n02408429\n",
-      "n03297495 n02089973\n",
-      "n04356056 n03297495\n",
-      "n03498962 n04356056\n",
-      "n04357314 n03498962\n",
-      "n01704323 n04357314\n",
-      "n03958227 n01704323\n",
-      "n04443257 n03958227\n",
-      "n02096437 n04443257\n",
-      "n02097130 n02096437\n",
-      "n01944390 n02097130\n",
-      "n13054560 n01944390\n",
-      "n02883205 n13054560\n",
-      "n02488702 n02883205\n",
-      "n03691459 n02488702\n",
-      "n01770393 n03691459\n",
-      "n02437616 n01770393\n",
-      "n01698640 n02437616\n",
-      "n02097298 n01698640\n",
-      "n02280649 n02097298\n",
-      "n02100583 n02280649\n",
-      "n07920052 n02100583\n",
-      "n02088238 n07920052\n",
-      "n02096177 n02088238\n",
-      "n01580077 n02096177\n",
-      "n04371774 n01580077\n",
-      "n02110185 n04371774\n",
-      "n02277742 n02110185\n",
-      "n04118776 n02277742\n",
-      "n02051845 n04118776\n",
-      "n09835506 n02051845\n",
-      "n04418357 n09835506\n",
-      "n03376595 n04418357\n",
-      "n02701002 n03376595\n",
-      "n04146614 n02701002\n",
-      "n03729826 n04146614\n",
-      "n02795169 n03729826\n",
-      "n01641577 n02795169\n",
-      "n01753488 n01641577\n",
-      "n03956157 n01753488\n",
-      "n01855032 n03956157\n",
-      "n03676483 n01855032\n",
-      "n02113799 n03676483\n",
-      "n02105162 n02113799\n",
-      "n02085620 n02105162\n",
-      "n04589890 n02085620\n",
-      "n07860988 n04589890\n",
-      "n03045698 n07860988\n",
-      "n02445715 n03045698\n",
-      "n01828970 n02445715\n",
-      "n02108422 n01828970\n",
-      "n02094114 n02108422\n",
-      "n04296562 n02094114\n",
-      "n03134739 n04296562\n",
-      "n02112350 n03134739\n",
-      "n02089867 n02112350\n",
-      "n02443484 n02089867\n",
-      "n02111277 n02443484\n",
-      "n02097209 n02111277\n",
-      "n03773504 n02097209\n",
-      "n03347037 n03773504\n",
-      "n02808440 n03347037\n",
-      "n04204347 n02808440\n",
-      "n03355925 n04204347\n",
-      "n02099267 n03355925\n",
-      "n09246464 n02099267\n",
-      "n03425413 n09246464\n",
-      "n03188531 n03425413\n"
+      ".DS_Store\n",
+      "172\n"
+     ]
+    }
+   ],
+   "source": [
+    "train_chk = os.listdir('/data/ephemeral/home/cv20-proj1/level1-imageclassification-cv-20/suyoung/data/train')\n",
+    "canny_chk = os.listdir('/data/ephemeral/home/cv20-proj1/level1-imageclassification-cv-20/suyoung/data/canny')\n",
+    "\n",
+    "for i in range(len(train_chk)):\n",
+    "    if train_chk[i] not in canny_chk:\n",
+    "        print(train_chk[i])\n",
+    "        print(i)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "n02992211 .DS_Store\n"
      ]
     }
    ],
@@ -1204,9 +729,9 @@
     "source_folders = os.listdir(source_dir)\n",
     "destination_folders = os.listdir(destination_dir)\n",
     "\n",
-    "for i in range(len(source_folders)):\n",
-    "    if source_folders[i] == destination_folders[i]:\n",
-    "        folder = source_folders[i]\n",
+    "for i in range(len(destination_folders)):\n",
+    "    if destination_folders[i] in source_folders:\n",
+    "        folder = destination_folders[i]\n",
     "        source_images_path = os.path.join(source_dir, folder)\n",
     "        source_images_list = os.listdir(source_images_path)\n",
     "\n",
@@ -1217,10 +742,8 @@
     "            destination_file_path = os.path.join(destination_dir, folder, new_name)\n",
     "            shutil.copy2(source_file_path, destination_file_path)\n",
     "\n",
-    "        print(f'{source_folders[i]} done')\n",
-    "\n",
     "    else:\n",
-    "        print(source_folders[i], destination_folders[i])"
+    "        print(i, destination_folders[i])"
    ]
   }
  ],
